--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -56,6 +56,7 @@ jobs:
 
       # Step 4: Deploy to Vercel
       - name: Deploy to Vercel
+        run: vercel deploy --yes
         uses: amondnet/vercel-action@v20
         with:
           vercel-token: CGoPquzvmCKrAiXuCm90SY7c  # You must store your Vercel token in GitHub secrets
