--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "main.py": {
-      "runtime": "@vercel/python",
+      "runtime": "@vercel/python@3.9",
       "maxDuration": 10,
       "memory": 1024
     }
