--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
   "version": 2,
-  "functions": {
-    "main.py": {
-      "runtime": "@vercel/python@3.9",
-      "maxDuration": 10,
-      "memory": 1024
+  "builds": [
+    {
+      "src": "main.py",
+      "use": "@vercel/python"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/(.*)",
@@ -14,4 +13,3 @@
     }
   ]
 }
-
