--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -1,11 +1,37 @@
-# Exported from Render on 2025-02-10T18:26:30Z
-services:
-- type: web
-  name: ML-DOG-ALGO
-  runtime: python
-  repo: https://github.com/vanshgurnani/ML-DOG-ALGO
-  plan: free
-  region: oregon
-  buildCommand: pip install -r requirements.txt
-  startCommand: gunicorn -w 2 -b 0.0.0.0:$PORT main:app
-version: "1"
+name: CI/CD Pipeline for FastAPI App on Render
+
+on:
+  push:
+    branches:
+      - main  # Trigger CI/CD only when changes are pushed to the main branch
+  pull_request:
+    branches:
+      - main  # Trigger CI/CD on PR creation/updates for the main branch
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest  # Runs on a fresh environment
+
+    steps:
+      # Step 1: Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # Step 2: Set up Python
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+    
+      # Step 4: Deploy to Render
+      - name: Deploy to Render
+        env:
+          RENDER_API_KEY: rnd_5wojXkIuxDFNHcuCuqAT95NnRz26
+        run: |
+          curl -X POST "https://api.render.com/deploy/srv-cuhj68dds78s73euvgdg?key=rnd_5wojXkIuxDFNHcuCuqAT95NnRz26"
